--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | BlackJackRPG</title>
     <script src="Build/UnityLoader.js"></script>
+    <script src="windowsResize.js"></script>
     <script>
       UnityLoader.instantiate("unityContainer", "Build/Abystraxt_BlackJack_1920.json");
     </script>
