--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | BlackJackRPG</title>
+    <script type="text/javascript" src="windowsResize.js"></script>
     <script src="Build/UnityLoader.js"></script>
-    <script src="windowsResize.js"></script>
     <script>
       UnityLoader.instantiate("unityContainer", "Build/Abystraxt_BlackJack_1920.json");
     </script>
