--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="windowsResize.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=360,initial-scale=1">
     <title>Unity WebGL Player | BlackJackRPG</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
